--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,2 +1,9 @@
 [theme]
-showMenu = false
+primaryColor = "#F63366"
+backgroundColor = "#FFFFFF"
+secondaryBackgroundColor = "#F0F2F6"
+textColor = "#262730"
+
+# Disable the GitHub icon
+[global]
+hideGitHubButton = true
